<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:menuCategory="container">
        <item android:title="@string/menu1">
            <menu>
                <item
                    android:id="@+id/menuMainAct"
                    android:icon="@android:drawable/ic_menu_day"
                    android:title="@string/menu1_1_Main" />
                <item
                    android:id="@+id/menuRegistroEventoAct"
                    android:icon="@android:drawable/ic_menu_agenda"
                    android:title="@string/menu1_2_RegEvt" />
            </menu>
        </item>
    </group>

    <group android:menuCategory="container">
        <item android:title="@string/menu2">
            <menu>
                <item
                    android:id="@+id/menuCalAct_calendario"
                    android:icon="@android:drawable/ic_menu_my_calendar"
                    android:title="@string/menu2_1_ConsEvt" />
                <item
                    android:id="@+id/menuCalAct_solar"
                    android:icon="@android:drawable/ic_menu_compass"
                    android:title="@string/menu2_2_ConsSol" />
            </menu>
        </item>
    </group>

    <group android:menuCategory="container">
        <item android:title="@string/menu3">
            <menu>
                <item
                    android:id="@+id/menuLocalAct"
                    android:icon="@android:drawable/ic_menu_mapmode"
                    android:title="@string/menu3_1_Locais" />
                <item
                    android:id="@+id/menuRegistroLocalAct"
                    android:icon="@android:drawable/ic_dialog_map"
                    android:title="@string/menu3_2_RegLocal" />
            </menu>
        </item>
    </group>

</menu>