<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:scrollbarFadeDuration="2000"
    tools:context=".LocaisActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroudSecundario"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/backgroudPrimario"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etLocEdDiagLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textSize="24sp"
                tools:text="Local"
                android:hint="@string/hint_etLocEdDiagLocal"
                tools:ignore="Autofill"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:textSize="24sp"
                    android:text="@string/label_tvLocEdDiagLatitude"/>
                <TextView
                    android:id="@+id/tvLocEdDiagLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="-23.123"
                    style="@style/regViewStyle"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:textSize="24sp"
                    android:text="@string/label_tvLocEdDiagLongitude"/>
                <TextView
                    android:id="@+id/tvLocEdDiagLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="-45.123"
                    style="@style/regViewStyle"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:textSize="24sp"
                    android:text="Fuso Horário:"/>
                <TextView
                    android:id="@+id/tvLocEdDiagFusoHorario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="-3"
                    style="@style/regViewStyle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UTC"
                    style="@style/regViewStyle"/>

            </LinearLayout>

            <EditText
                android:id="@+id/etLocEdDiagDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="16dp"
                android:textSize="24sp"
                android:inputType="textMultiLine"
                android:background="@color/backgroudSecundario"
                android:hint="@string/hint_etLocEdDiagDescricao"
                tools:ignore="Autofill" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>