<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarFadeDuration="2000"
        tools:context=".RegistroEventoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroudSecundario"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="Registro"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#303030"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etRegEvtActTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="16dp"
                    android:textSize="24sp"
                    android:inputType="text"
                    android:hint="@string/hint_etRegAgActTitulo"
                    tools:ignore="Autofill" />

                <Spinner
                    android:id="@+id/spnRegEvtActTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:entries="@array/tipo_registro"
                    android:theme="@style/selectInputStyle"/>
                <Spinner
                    android:id="@+id/spnRegEvtActRecorrencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:entries="@array/recorrencia_registro"
                    android:theme="@style/selectInputStyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/selecao"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvRegEvtActData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:padding="8dp"
                            android:text="@string/txt_tvRegAgActData"
                            style="@style/selectInputStyle"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:orientation="vertical"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/selecao"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvRegEvtActHora"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:padding="8dp"
                            android:text="@string/txt_tvRegAgActHora"
                            style="@style/selectInputStyle"/>
                    </LinearLayout>
                </LinearLayout>

                <EditText
                    android:id="@+id/etRegEvtActDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="16dp"
                    android:textSize="24sp"
                    android:inputType="textMultiLine"
                    android:background="@color/backgroudSecundario"
                    android:hint="@string/hint_etRegAgActDescricao"
                    tools:ignore="Autofill"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/selecao"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnRegEvtActRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="@string/txt_btnRegAgActRegistrar"
                        style="@style/btnStyle"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity = "start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_main"/>
</androidx.drawerlayout.widget.DrawerLayout>